# GoldAgent

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  review-rules.md  supervise-plan.md
.github/workflows/: release.yml  update-formula.yml
Formula/: goldagent.rb
src/: chat_actions.rs  cli.rs  config.rs  connect.rs  daemon.rs  hooks.rs  jobs.rs  main.rs  memory.rs  notify.rs  openai.rs  provider.rs  scheduler.rs  shell.rs  skills.rs  usage.rs
