[package]
name = "goldagent"
version = "0.1.2"
edition = "2024"
description = "GoldAgent 本地命令行助手"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.12"
dirs = "5.0"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1.12", features = ["serde", "v4"] }
